--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3 style="color: white;">Ligue para nós</h3>
-                  <p>+55 (16)99991-5632</p>
+                  <p>------</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -985,7 +985,7 @@
           <p></p>
           <p>IFSP</p>
           <p>Araraquara-SP,Brazil</p>
-          <p class="mt-4"><strong>Telefone:</strong> <span>+55 (16)99991-5632</span></p>
+          <p class="mt-4"><strong>Telefone:</strong> <span>---------</span></p>
           <p><strong>Email:</strong> <span>yfernades07@gamil.com</span></p>
         </div>
 
